<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/taskCellContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doneButton"
            android:layout_marginHorizontal="10dp"
            android:scaleX="1.25"
            android:scaleY="1.25"
            android:contentDescription="CheckBox"
            android:layout_gravity="center"
            android:src="@drawable/unchecked_24"
            android:backgroundTint="@android:color/transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="cokolwiek"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            android:layout_weight="1"/>


    </LinearLayout>



</androidx.cardview.widget.CardView>