<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText" >

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/todoListRecyclerView"
        android:backgroundTint="@color/design_default_color_background"
        tools:listitem="@layout/task_item_cell"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:layout_margin="20dp"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="40dp"
        app:iconTint="@color/white"/>



</RelativeLayout>